<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.footprint.locsaver.locsaver.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/latView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultLat" />

    <TextView
        android:id="@+id/longView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultLong"
        android:layout_below="@+id/latView" />

    <TextView
        android:id="@+id/lastUpdateTimeView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/defaultLastUpdate"
        android:layout_below="@+id/longView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_location_manual"
        android:onClick="getLocationManual"
        android:id="@+id/GetLocationBtn"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/lastUpdateTimeView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_map_act"
        android:onClick="goToMapActivity"
        android:id="@+id/goToMapBtn"
        android:layout_below="@+id/GetLocationBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addFootprint"
        android:onClick="addFootprint"
        android:id="@+id/addFootprintBtn"
        android:layout_below="@+id/goToMapBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delAllFootprints"
        android:onClick="delAllFootprints"
        android:id="@+id/delAllFootprintsBtn"
        android:layout_below="@+id/addFootprintBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
